# syncvlc

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
src/: common.h  network.c  network.h  protocol.h  relay.c  syncvlc.c  syncvlc_relay.c  vlc.c  vlc.h
